# joymatlib

./: README_Usage.md  build.sh  build_examples.sh  compile.sh  eigen_number.cpp  my_matrix_demo  my_matrix_demo.cpp  test1.txt  test2.txt
MatrixLib/: CMakeLists.txt  LICENSE  README.md
MatrixLib/include/: EigenSolver.h  LUDecomposition.h  QRDecomposition.h  SVDDecomposition.h  SparseMatrix.h
MatrixLib/src/: EigenSolver.cpp  LUDecomposition.cpp  QRDecomposition.cpp  SVDDecomposition.cpp  SparseMatrix.cpp  main.cpp
example_usage/: CMakeLists.txt  main.cpp
simple_example/: CMakeLists.txt  main.cpp
src/: main.cpp  operations.cpp
